# Ipyter

./: README.md  static.ml
PyTER/: dune-project  result.txt  run.sh
PyTER/_build/: .db  .digest-db  log
PyTER/_build/default/: META.PyTER  PyTER.dune-package  PyTER.install  PyTER.opam
PyTER/_build/default/.dune/: configurator  configurator.v2
PyTER/_build/default/lib/: flocal.ml  lib.cma  lib.cmxa  lib.cmxs  lib.ml-gen  patch.ml  static.ml
PyTER/_build/default/lib/.lib.objs/: flocal.ml.d  lib__Flocal.impl.all-deps  patch.ml.d  static.ml.d
PyTER/_build/default/lib/.merlin-conf/: lib-PyTER.lib
PyTER/_build/default/pycaml/: ast.ml  flocal.ml  pycaml.cma  pycaml.cmxa  pycaml.cmxs  pycaml.ml-gen  static.ml  test.ml  util.ml
PyTER/_build/default/pycaml/.merlin-conf/: lib-PyTER.pycaml
PyTER/_build/default/pycaml/.pycaml.objs/: flocal.ml.d  patch.ml.d  pycaml__Flocal.impl.all-deps  pycaml__Static.impl.all-deps  static.ml.d  test.ml.d
PyTER/_build/default/test/.merlin-conf/: exe-PyTER
PyTER/lib/: dune  flocal.ml  patch.ml  static.ml
PyTER/pycaml/: ast.ml  ast2json.py  ast2string.ml  dune  flocal.ml  old_static.ml  opam.txt  result.json  static.ml  template.py  traceback.sh
PyTER/test/: dune  neg.json  pos.json
PyTER/test/pandas/_libs/: algos_rank_helper.pxi  groupby.c  groupby_helper.pxi  hashing.c  hashtable.c  hashtable_class_helper.pxi  index.c  indexing.c  lib.c  missing.c  parsers.c  properties.c  reshape.c  skiplist.c  sparse.c  testing.c  tslib.c  window.c
PyTER/test/pandas/_libs/tslibs/: ccalendar.c  conversion.c  fields.c  frequencies.c  (+10 more)
(+93 files in other folders)
