(lang dune 3.6)

(name PyTER)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name PyTER)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends 
  (PyTER.lib :build)
  (PyTER.pycaml :build)
  (dune :build)
  (core :build))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
